--- a/SFMForFraudTransactions/appsettings.json
+++ b/SFMForFraudTransactions/appsettings.json
@@ -7,5 +7,10 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "Tokens": {
+    "Key": "KEYLONGVALUETHATISSECUREButNotSoSecure",
+    "Issuer": "http://antifraud.azurewebsites.net",
+    "Audience": "http://antifraud.azurewebsites.net"
   }
 }
