Added swagger and production settings

--- a/SFMForFraudTransactions/appsettings.Development.json
+++ b/SFMForFraudTransactions/appsettings.Development.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SFMForFraudTransactions-70D0C9ED-A3C1-4FB9-B6D0-A6D304B79EF0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
