--- a/SFMForFraudTransactions/appsettings.Development.json
+++ b/SFMForFraudTransactions/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=tcp:zemogahernandbserver.database.windows.net,1433;Initial Catalog=zemogahernan_db;User Id=sqladmin@zemogahernandbserver;Password=Melapela345"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-SFMForFraudTransactions-70D0C9ED-A3C1-4FB9-B6D0-A6D304B79EF0;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
