--- a/SFMForFraudTransactions/appsettings.Production.json
+++ b/SFMForFraudTransactions/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "_yourAzureServerConnectionString_"
+    "DefaultConnection": "Data Source=tcp:zemogahernandbserver.database.windows.net,1433;Initial Catalog=zemogahernan_db;User Id=sqladmin@zemogahernandbserver;Password=Melapela345"
   },
   "Logging": {
     "IncludeScopes": false,
